# proof

./: .gitignore  Compile.hs  DecoratedTex.hs  LICENSE  Latex.hs  Main.hs  Parse.hs  README-latex.md  README.md  TeXParser.hs  Tex.hs  TranslateTex.hs  Types.hs  Utils.hs  eg.proof  example.proof  index.html  macros.tex  params.json  proof.cabal
Parse/: Common.hs  Latex.hs  Tex.hs
examples/: primes.tex
lib/fonts/latinmodernroman_10bold_macroman/: lmroman10-bold-demo.html  stylesheet.css
lib/fonts/latinmodernroman_10bolditalic_macroman/: lmroman10-bolditalic-demo.html  stylesheet.css
lib/fonts/latinmodernroman_10italic_macroman/: lmroman10-italic-demo.html  stylesheet.css
lib/fonts/latinmodernroman_10regular_macroman/: lmroman10-regular-demo.html  stylesheet.css
lib/fonts/latinmodernromancaps_10oblique_macroman/: lmromancaps10-oblique-demo.html  stylesheet.css
lib/fonts/latinmodernromancaps_10regular_macroman/: lmromancaps10-regular-demo.html  stylesheet.css
lib/fonts/latinmodernromandemi_10oblique_macroman/: lmromandemi10-oblique-demo.html  stylesheet.css
lib/fonts/latinmodernromandemi_10regular_macroman/: lmromandemi10-regular-demo.html  stylesheet.css
lib/fonts/latinmodernromandunhill_10oblique_macroman/: lmromandunh10-oblique-demo.html  stylesheet.css
lib/fonts/latinmodernromandunhill_10regular_macroman/: lmromandunh10-regular-demo.html  stylesheet.css
lib/fonts/latinmodernromanslanted_10bold_macroman/: lmromanslant10-bold-demo.html  stylesheet.css
lib/fonts/latinmodernromanslanted_10regular_macroman/: lmromanslant10-regular-demo.html  stylesheet.css
primes/: index.html  proof.js
primes/lib/fonts/latinmodernroman_10bolditalic_macroman/: stylesheet.css
primes/lib/fonts/latinmodernromancaps_10regular_macroman/: stylesheet.css
src/css/: proof.css
src/js/: proof.js
vim/ftdetect/: proof.vim
vim/syntax/: proof.vim
