name:                proof

version:             0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:            

-- A longer description of the package.
-- description:         

license:             MIT

license-file:        LICENSE

author:              Izaak Meckler

maintainer:          ihmeckler@gmail.com

copyright:           2014 Izaak Meckler

category:            Language

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


executable proof
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs
  
  -- Modules included in this executable, other than Main.
  -- other-modules:       
  
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    
  
  -- Other library packages from which modules are imported.
  build-depends:       base >=4.7 && <4.8,
                       text >= 1.2,
                       parsec >= 3.1.6,
                       containers >= 0.5.5.1,
                       mtl >= 2.2.1,
                       comonad >= 4.2.2
  
  -- Directories containing source files.
  -- hs-source-dirs:      
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
  
