name:                proof

version:             0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:            

-- A longer description of the package.
-- description:         

license:             MIT

license-file:        LICENSE

author:              Izaak Meckler

maintainer:          ihmeckler@gmail.com

copyright:           2014 Izaak Meckler

category:            Language

build-type:          Simple

data-files:          src/js/proof.js,
                     src/css/proof.css,
                     lib/js/*

-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


executable proof
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs
  
  -- Modules included in this executable, other than Main.
  other-modules:       Paths_proof
  
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    
  
  -- TODO: Try to get transformers to 0.4
  build-depends:       base >=4.7 && <4.8,
                       text >= 1.2,
                       parsec >= 3.1.6,
                       containers >= 0.5.5.1,
                       mtl >= 2.2,
                       transformers == 0.4.*,
                       QuickCheck >= 2.7,
                       comonad >= 4.2.2,
                       optparse-applicative >= 0.10.0,
                       HaTeX >= 3.13.1

  -- Directories containing source files.
  -- hs-source-dirs:      
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
  
