name:                proof

version:             0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:            

-- A longer description of the package.
-- description:         

license:             MIT

license-file:        LICENSE

author:              Izaak Meckler

maintainer:          ihmeckler@gmail.com

copyright:           2014 Izaak Meckler

category:            Language

build-type:          Simple

data-files:          src/js/proof.js,
                     src/css/proof.css,
                     lib/js/jquery.min.js,
                     lib/fonts/latinmodernroman_10bolditalic_macroman/stylesheet.css,
                     lib/fonts/latinmodernroman_10bolditalic_macroman/lmroman10-bolditalic-webfont.woff,
                     lib/fonts/latinmodernroman_10bold_macroman/stylesheet.css,
                     lib/fonts/latinmodernroman_10bold_macroman/lmroman10-bold-webfont.woff,
                     lib/fonts/latinmodernroman_10italic_macroman/stylesheet.css,
                     lib/fonts/latinmodernroman_10italic_macroman/lmroman10-italic-webfont.woff,
                     lib/fonts/latinmodernroman_10regular_macroman/stylesheet.css,
                     lib/fonts/latinmodernroman_10regular_macroman/lmroman10-regular-webfont.woff,
                     lib/fonts/latinmodernromancaps_10oblique_macroman/stylesheet.css,
                     lib/fonts/latinmodernromancaps_10oblique_macroman/lmromancaps10-oblique-webfont.woff,
                     lib/fonts/latinmodernromancaps_10regular_macroman/lmromancaps10-regular-webfont.woff,
                     lib/fonts/latinmodernromancaps_10regular_macroman/stylesheet.css,
                     lib/fonts/latinmodernromandemi_10oblique_macroman/stylesheet.css,
                     lib/fonts/latinmodernromandemi_10oblique_macroman/lmromandemi10-oblique-webfont.woff,
                     lib/fonts/latinmodernromandemi_10regular_macroman/stylesheet.css,
                     lib/fonts/latinmodernromandemi_10regular_macroman/lmromandemi10-regular-webfont.woff,
                     lib/fonts/latinmodernromandunhill_10oblique_macroman/stylesheet.css,
                     lib/fonts/latinmodernromandunhill_10oblique_macroman/lmromandunh10-oblique-webfont.woff,
                     lib/fonts/latinmodernromandunhill_10regular_macroman/stylesheet.css,
                     lib/fonts/latinmodernromandunhill_10regular_macroman/lmromandunh10-regular-webfont.woff,
                     lib/fonts/latinmodernromanslanted_10bold_macroman/lmromanslant10-bold-webfont.woff,
                     lib/fonts/latinmodernromanslanted_10bold_macroman/stylesheet.css,
                     lib/fonts/latinmodernromanslanted_10regular_macroman/stylesheet.css,
                     lib/fonts/latinmodernromanslanted_10regular_macroman/lmromanslant10-regular-webfont.woff

                     lib/js/MathJax/fonts/HTML-CSS/TeX/woff/MathJax_Caligraphic-Bold.woff,
                     lib/js/MathJax/fonts/HTML-CSS/TeX/woff/MathJax_Math-Italic.woff,
                     lib/js/MathJax/fonts/HTML-CSS/TeX/woff/MathJax_Fraktur-Regular.woff,
                     lib/js/MathJax/fonts/HTML-CSS/TeX/woff/MathJax_Caligraphic-Regular.woff,
                     lib/js/MathJax/fonts/HTML-CSS/TeX/woff/MathJax_Script-Regular.woff,
                     lib/js/MathJax/fonts/HTML-CSS/TeX/woff/MathJax_Size2-Regular.woff,
                     lib/js/MathJax/fonts/HTML-CSS/TeX/woff/MathJax_Size3-Regular.woff,
                     lib/js/MathJax/fonts/HTML-CSS/TeX/woff/MathJax_Fraktur-Bold.woff,
                     lib/js/MathJax/fonts/HTML-CSS/TeX/woff/MathJax_SansSerif-Regular.woff,
                     lib/js/MathJax/fonts/HTML-CSS/TeX/woff/MathJax_Math-Regular.woff,
                     lib/js/MathJax/fonts/HTML-CSS/TeX/woff/MathJax_Size4-Regular.woff,
                     lib/js/MathJax/fonts/HTML-CSS/TeX/woff/MathJax_SansSerif-Italic.woff,
                     lib/js/MathJax/fonts/HTML-CSS/TeX/woff/MathJax_AMS-Regular.woff,
                     lib/js/MathJax/fonts/HTML-CSS/TeX/woff/MathJax_Main-Regular.woff,
                     lib/js/MathJax/fonts/HTML-CSS/TeX/woff/MathJax_Main-Bold.woff,
                     lib/js/MathJax/fonts/HTML-CSS/TeX/woff/MathJax_Typewriter-Regular.woff,
                     lib/js/MathJax/fonts/HTML-CSS/TeX/woff/MathJax_Size1-Regular.woff,
                     lib/js/MathJax/fonts/HTML-CSS/TeX/woff/MathJax_Math-BoldItalic.woff,
                     lib/js/MathJax/fonts/HTML-CSS/TeX/woff/MathJax_Main-Italic.woff,
                     lib/js/MathJax/fonts/HTML-CSS/TeX/woff/MathJax_SansSerif-Bold.woff,
                     lib/js/MathJax/extensions/HelpDialog.js,
                     lib/js/MathJax/extensions/tex2jax.js,
                     lib/js/MathJax/extensions/HTML-CSS/handle-floats.js,
                     lib/js/MathJax/extensions/FontWarnings.js,
                     lib/js/MathJax/extensions/MathZoom.js,
                     lib/js/MathJax/extensions/MathMenu.js,
                     lib/js/MathJax/extensions/Safe.js,
                     lib/js/MathJax/extensions/MatchWebFonts.js,
                     lib/js/MathJax/extensions/TeX/mhchem.js,
                     lib/js/MathJax/extensions/TeX/autoload-all.js,
                     lib/js/MathJax/extensions/TeX/noUndefined.js,
                     lib/js/MathJax/extensions/TeX/enclose.js,
                     lib/js/MathJax/extensions/TeX/AMSmath.js,
                     lib/js/MathJax/extensions/TeX/HTML.js,
                     lib/js/MathJax/extensions/TeX/color.js,
                     lib/js/MathJax/extensions/TeX/mathchoice.js,
                     lib/js/MathJax/extensions/TeX/AMScd.js,
                     lib/js/MathJax/extensions/TeX/extpfeil.js,
                     lib/js/MathJax/extensions/TeX/bbox.js,
                     lib/js/MathJax/extensions/TeX/noErrors.js,
                     lib/js/MathJax/extensions/TeX/newcommand.js,
                     lib/js/MathJax/extensions/TeX/boldsymbol.js,
                     lib/js/MathJax/extensions/TeX/action.js,
                     lib/js/MathJax/extensions/TeX/autobold.js,
                     lib/js/MathJax/extensions/TeX/unicode.js,
                     lib/js/MathJax/extensions/TeX/verb.js,
                     lib/js/MathJax/extensions/TeX/begingroup.js,
                     lib/js/MathJax/extensions/TeX/cancel.js,
                     lib/js/MathJax/extensions/TeX/AMSsymbols.js,
                     lib/js/MathJax/extensions/MathEvents.js,
                     lib/js/MathJax/MathJax.js,
                     lib/js/MathJax/CONTRIBUTING.md,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/WinIE6/Regular/Bold.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/WinIE6/Regular/Main.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/WinIE6/Regular/AMS.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/SansSerif/Italic/Other.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/SansSerif/Italic/Main.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/SansSerif/Italic/CombDiacritMarks.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/SansSerif/Italic/BasicLatin.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/SansSerif/Regular/Other.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/SansSerif/Regular/Main.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/SansSerif/Regular/CombDiacritMarks.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/SansSerif/Regular/BasicLatin.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/SansSerif/Bold/Other.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/SansSerif/Bold/Main.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/SansSerif/Bold/CombDiacritMarks.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/SansSerif/Bold/BasicLatin.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Math/Italic/Main.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Math/BoldItalic/Main.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/AMS/Regular/Arrows.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/AMS/Regular/Latin1Supplement.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/AMS/Regular/MiscTechnical.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/AMS/Regular/MiscMathSymbolsB.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/AMS/Regular/MiscSymbols.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/AMS/Regular/GreekAndCoptic.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/AMS/Regular/BoxDrawing.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/AMS/Regular/PUA.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/AMS/Regular/Main.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/AMS/Regular/GeneralPunctuation.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/AMS/Regular/SuppMathOperators.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/AMS/Regular/Dingbats.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/AMS/Regular/LatinExtendedA.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/AMS/Regular/CombDiacritMarks.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/AMS/Regular/MathOperators.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/AMS/Regular/EnclosedAlphanum.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/AMS/Regular/LetterlikeSymbols.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/AMS/Regular/GeometricShapes.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/AMS/Regular/SpacingModLetters.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/AMS/Regular/BBBold.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Script/Regular/Other.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Script/Regular/Main.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Script/Regular/BasicLatin.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/WinChrome/Regular/Main.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Size2/Regular/Main.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Caligraphic/Regular/Main.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Caligraphic/Bold/Main.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Fraktur/Regular/Other.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Fraktur/Regular/PUA.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Fraktur/Regular/Main.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Fraktur/Regular/BasicLatin.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Fraktur/Bold/Other.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Fraktur/Bold/PUA.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Fraktur/Bold/Main.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Fraktur/Bold/BasicLatin.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Main/Italic/Latin1Supplement.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Main/Italic/Main.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Main/Italic/GeneralPunctuation.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Main/Italic/CombDiacritMarks.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Main/Italic/LetterlikeSymbols.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Main/Regular/MiscSymbols.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Main/Regular/Main.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Main/Regular/CombDiacritMarks.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Main/Regular/GeometricShapes.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Main/Regular/SpacingModLetters.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Main/Bold/Arrows.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Main/Bold/Latin1Supplement.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Main/Bold/MiscTechnical.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Main/Bold/SupplementalArrowsA.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Main/Bold/MiscSymbols.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Main/Bold/MiscMathSymbolsA.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Main/Bold/LatinExtendedB.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Main/Bold/Main.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Main/Bold/GeneralPunctuation.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Main/Bold/SuppMathOperators.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Main/Bold/LatinExtendedA.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Main/Bold/CombDiacritMarks.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Main/Bold/CombDiactForSymbols.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Main/Bold/MathOperators.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Main/Bold/LetterlikeSymbols.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Main/Bold/GeometricShapes.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Main/Bold/SpacingModLetters.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/fontdata-extra.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Greek/Italic/Main.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Greek/Regular/Main.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Greek/Bold/Main.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Greek/BoldItalic/Main.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Size4/Regular/Main.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Size1/Regular/Main.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Size3/Regular/Main.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Typewriter/Regular/Other.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Typewriter/Regular/Main.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Typewriter/Regular/CombDiacritMarks.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/Typewriter/Regular/BasicLatin.js,
                     lib/js/MathJax/jax/output/HTML-CSS/fonts/TeX/fontdata.js,
                     lib/js/MathJax/jax/output/HTML-CSS/autoload/ms.js,
                     lib/js/MathJax/jax/output/HTML-CSS/autoload/annotation-xml.js,
                     lib/js/MathJax/jax/output/HTML-CSS/autoload/multiline.js,
                     lib/js/MathJax/jax/output/HTML-CSS/autoload/mglyph.js,
                     lib/js/MathJax/jax/output/HTML-CSS/autoload/maction.js,
                     lib/js/MathJax/jax/output/HTML-CSS/autoload/menclose.js,
                     lib/js/MathJax/jax/output/HTML-CSS/autoload/mtable.js,
                     lib/js/MathJax/jax/output/HTML-CSS/autoload/mmultiscripts.js,
                     lib/js/MathJax/jax/output/HTML-CSS/jax.js,
                     lib/js/MathJax/jax/output/HTML-CSS/config.js,
                     lib/js/MathJax/jax/element/mml/jax.js,
                     lib/js/MathJax/jax/element/mml/optable/Arrows.js,
                     lib/js/MathJax/jax/element/mml/optable/Latin1Supplement.js,
                     lib/js/MathJax/jax/element/mml/optable/MiscTechnical.js,
                     lib/js/MathJax/jax/element/mml/optable/SupplementalArrowsA.js,
                     lib/js/MathJax/jax/element/mml/optable/MiscMathSymbolsB.js,
                     lib/js/MathJax/jax/element/mml/optable/SupplementalArrowsB.js,
                     lib/js/MathJax/jax/element/mml/optable/GreekAndCoptic.js,
                     lib/js/MathJax/jax/element/mml/optable/MiscMathSymbolsA.js,
                     lib/js/MathJax/jax/element/mml/optable/GeneralPunctuation.js,
                     lib/js/MathJax/jax/element/mml/optable/SuppMathOperators.js,
                     lib/js/MathJax/jax/element/mml/optable/Dingbats.js,
                     lib/js/MathJax/jax/element/mml/optable/CombDiacritMarks.js,
                     lib/js/MathJax/jax/element/mml/optable/CombDiactForSymbols.js,
                     lib/js/MathJax/jax/element/mml/optable/MathOperators.js,
                     lib/js/MathJax/jax/element/mml/optable/LetterlikeSymbols.js,
                     lib/js/MathJax/jax/element/mml/optable/GeometricShapes.js,
                     lib/js/MathJax/jax/element/mml/optable/BasicLatin.js,
                     lib/js/MathJax/jax/element/mml/optable/SpacingModLetters.js,
                     lib/js/MathJax/jax/element/mml/optable/MiscSymbolsAndArrows.js,
                     lib/js/MathJax/jax/input/TeX/jax.js,
                     lib/js/MathJax/jax/input/TeX/config.js,
                     lib/js/MathJax/LICENSE,
                     lib/js/MathJax/config/local/local.js,
                     lib/js/MathJax/config/TeX-AMS_HTML.js,
                     lib/js/MathJax/config/Safe.js,
                     lib/js/MathJax/images/MenuArrow-15.png,
                     lib/js/MathJax/images/CloseX-31.png

-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


executable proof
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs
  
  -- Modules included in this executable, other than Main.
  other-modules:       Paths_proof
  
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    
  
  -- TODO: Try to get transformers to 0.4
  build-depends:       base >=4.7 && <4.8,
                       text >= 1.2,
                       fsnotify >= 0.1.0.3,
                       parsec >= 3.1.6,
                       containers >= 0.5.5.1,
                       mtl >= 2.2,
                       transformers == 0.4.*,
                       exceptions >= 0.6.1,
                       QuickCheck >= 2.7,
                       comonad >= 4.2.2,
                       optparse-applicative >= 0.10.0,
                       HaTeX >= 3.13.1,
                       system-fileio >= 0.3.14,
                       system-filepath >= 0.4.12

  -- Directories containing source files.
  -- hs-source-dirs:      
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
  
